--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Antic+Didone&family=Hurricane&family=Manjari:wght@100;400&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Noto+Sans+KR:wght@100&display=swap');
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -9,7 +13,7 @@
 
 body{
     font-size: 100%;
-    background: linear-gradient(68.15deg, #D3E4CD 16.2%, #F2DDC1 85.61%)
+    background: linear-gradient(68.15deg, #bccab7 16.2%, #F2DDC1 85.61%)
 }
 
 .cabecalho{
@@ -18,6 +22,7 @@ body{
     align-items: center;
     justify-content: space-around;
     padding: 24px;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
 
 }
 
@@ -28,9 +33,10 @@ body{
 .cabecalho-menu{
     display: flex;
     gap: 32px;
-    font-family: 'Manjari', sans-serif;
-    color: #99A799;
-    font-size: 18px;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: lighter;
+    color: #848d84;
+    font-size: 24px;
     align-items: center;
     
 }
@@ -39,6 +45,7 @@ body{
 .conteudo-central{
     margin-bottom: 48px;
     border-top: 0.1px solid #99A799;
+    
 
 }
 
@@ -59,31 +66,31 @@ body{
 
 
 h1{
-    font-family: 'Manjari', sans-serif;
-    color: #99A799;
-    font-size: 60px;
-    font-weight: lighter;; 
+    font-family: 'Cormorant Garamond', serif;
+    color: #5a5f5a;
+    font-size: 90px;
+    font-weight: lighter;
 }
 
 
 h3{
-    font-family: 'Manjari', sans-serif;
-    color: #99A799;
+    font-family: 'Cormorant Garamond', serif;
+    color: #777d77;
     font-size: 25px;
     font-weight: lighter;
 }
 
 .botao{
-    background-color: #E2C2B9;
+    background-color: #f5e8d6;
     width: 180px;
     height: 50px;
-    font-family: 'Manjari', sans-serif;
+    font-family: 'Cormorant Garamond', serif;;
     font-weight: 400px;
-    color: beige;
+    color: rgb(48, 48, 47);
     border-radius: 20px;
     border: none;
     box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
-    font-size: 20px;
+    font-size: 24px;
     margin-top: 48px;
 
 
@@ -92,10 +99,10 @@ h3{
 .imagem-principal{
 
     border-radius: 50%;
-    height: 400px ;
+    height: 500px ;
     padding: 24px;
     margin-top: 48px;
-    box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.25);
+    box-shadow: 3px 20px 5px rgba(0, 0, 0, 0.50);
 }
 
 .conteudo-central-segundo{
@@ -105,27 +112,31 @@ h3{
     gap: 24px;
     margin-top: 48px;
     align-items: center;
-    font-family: 'Manjari', sans-serif;
-    color: #99A799;
+    font-family: 'Cormorant Garamond', serif;;
+    color: #777d77;
+    padding: 48px;
+    font-size: 18px;
+    box-shadow: 3px 8px 5px rgba(0, 0, 0, 0.25);
 
 }
 .titulo-central-segundo{
-    border-top: 0.1px solid #99A799;
+    border-top: 0.1px solid #777d77;
     padding-top: 48px;
+    
 
 }
 
 
 footer{
-    padding: 24px;
-    border-top: 0.1px solid #99A799;
+    padding: 12px;
     align-items: center;
     display: flex;
     flex-direction: column;
     color: rgb(136, 136, 136);
-    font-family: 'Antic Didone', serif;
+    font-family: 'Cormorant Garamond', serif;;
     font: lighter;
     font-size: 15px;
+    
 
 
 }
